# harmonia

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile
harmonia/api/: dependencies.py  main.py  settings.py
harmonia/api/routers/: generate.py  jobs.py
harmonia/api/schemas/: generate.py  job.py
harmonia/domain/audio/: renderer.py
harmonia/domain/interpreter/: client.py  prompts.py  schemas.py
harmonia/domain/model/: config.py  inference.py
harmonia/infrastructure/: database.py  models.py  storage.py
harmonia/services/: generation.py
preprocessing/: create_hf_dataset.py  filter_lakh.py  tokenize_dataset.py  utils.py  verify.py
preprocessing/colab_notebooks/: 01_preprocess.ipynb  02_finetune_lora.ipynb
tests/: test_placeholder.py
tests/api/: test_routes.py
tests/domain/: test_inference.py  test_interpreter.py
tests/services/: test_generation.py
