[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonia"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30",
    "python-multipart>=0.0.9",
    "pretty_midi>=0.2.10",
    "miditok>=3.0",
    "pydub>=0.25",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3",
    "transformers>=4.43",
    "peft>=0.12",
    "datasets>=2.20",
    "accelerate>=0.31",
    "bitsandbytes>=0.43",
]
dev = [
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harmonia*"]

[tool.ruff]
line-length = 88
exclude = ["preprocessing/colab_notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
